Fixed credit card fields for extra small devices

--- a/content/get_involved/donations.html
+++ b/content/get_involved/donations.html
@@ -271,7 +271,7 @@ tags:
       <form class="CC form" role="form" id="CC-form" action="https://www.vancodev.com/cgi-bin/wsnvptest.vps" method="get">
         <fieldset>
           <div class="row text-left">
-            <div class="col-xs-offset-4 col-xs-4">
+            <div class="col-sm-offset-4 col-xs-12 col-sm-4">
               <div class="form-group has-feedback">
                 <label class="control-label" for="acctnumber">Credit Card Number</label>
                 <input class="form-control" id="acctnumber" name="accountnumber" type="text" size="16" x-autocompletetype="cc-number" pattern="^[0-9]{15,16}$" required>
@@ -287,7 +287,7 @@ tags:
             <div class="col-xs-offset-4 col-xs-8">
               <label class="control-label" for="cvv">Security Code (CVV)</label>
             </div>
-            <div class="col-xs-offset-4 col-xs-2">
+            <div class="col-sm-offset-4 col-xs-12 col-sm-2">
               <div class="form-group has-feedback">
                 <input class="form-control" type="text" id="cvv" name="cvvcode" 
                 pattern="^[0-9]{3,4}$" required>
@@ -296,7 +296,7 @@ tags:
             </div>
             <div class="clearfix"></div>
             <div class="col-xs-offset-4 col-xs-8"><label>Expiration Date</label></div>
-            <div class="col-xs-offset-4 col-xs-2">
+            <div class="col-sm-offset-4 col-xs-6 col-sm-2">
               <div class="form-group">
                 <select class="form-control" id="expmth" name="expmonth" required>
                   <option value="">Month</option>
@@ -306,7 +306,7 @@ tags:
                 </select>
               </div>
             </div>
-            <div class="col-xs-2">
+            <div class="col-xs-6 col-sm-2">
               <div class="form-group">
                 <select class="form-control" id="expyr" name="expyear" required>
                   <option value="">Year</option>
