--- a/content/get_involved/donations.html
+++ b/content/get_involved/donations.html
@@ -141,7 +141,7 @@ tags:
       </form>
       <h3>Cost of common patient care procedures</h3>
       <div class="row text-left">
-        <div class="col-xs-4 col-xs-offset-1">
+        <div class="col-sm-4 col-xs-offset-1">
           <ul class="list-group">
             <li class="list-group-item">
               Dental Cleaning
