--- a/content/index.html
+++ b/content/index.html
@@ -109,7 +109,7 @@ tags:
   <div class="col-md-4 text-center">
     <img class="frontpage img-responsive" src="/static/imgs/logos/teaming_up.png">
     <h2 class="text-center">Teaming Up</h2>
-    <h4 class="text-center">Help those in need transition from poverty to independence requires strong partnerships. Meet some of ours.</h4>
+    <h4 class="text-center">Helping those in need transition from poverty to independence requires strong partnerships. Meet some of ours.</h4>
   </div>
   <div class="col-md-4 text-center">
     <img class="frontpage img-responsive" src="/static/imgs/logos/Compassion.png">
