Added field ids for common procedures.

--- a/content/get_involved/donations.html
+++ b/content/get_involved/donations.html
@@ -8,6 +8,7 @@ tags:
 <script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.13.0/jquery.validate.min.js"></script>
 <script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.13.0/additional-methods.min.js"></script>
 <script type="text/javascript" src="/static/scripts/errorcodes.json" defer></script>
+<script type="text/javascript" src="/static/scripts/procedures.js" defer></script>
 <script type="text/javascript" src="/static/scripts/vancoServices.js" defer></script>
 <div class="bs-docs-featurette border1">
   <span id="alertfield"></span>
@@ -141,17 +142,7 @@ tags:
       </form>
       <h3>Cost of common patient care procedures</h3>
       <div class="row text-left">
-        <div class="col-sm-4 col-xs-offset-1">
-          <ul class="list-group">
-            <li class="list-group-item">
-              Dental Cleaning
-              <span class="badge"> $50</span>
-            </li>
-            <li class="list-group-item">
-              X-ray
-              <span class="badge">$40</span>
-            </li>
-          </ul>
+        <div id="procedures" class="col-sm-8 col-xs-offset-1">
         </div>
       </div>
     </div>
@@ -400,6 +391,7 @@ tags:
       <p> Keep this smile for your records.</p>
       <span id="confirm"></span>
       <p class="text-center"> Thank you for your donation!</p>
+      <p id="purchased" class="text-center"></p>
       <div class="text-center">San Antonio Christian Dental Clinic</div>
       <div class="text-center">1 Haven for Hope Way</div>
       <div class="text-center">San Antonio, Texas 78xxx</div>
