Verbiage changes per Gloria

--- a/content/clinic_info/index.html
+++ b/content/clinic_info/index.html
@@ -15,7 +15,8 @@ tags:
       <div class="col-md-4">
         <img src="/static/imgs/pic-content/pic9_480.jpg" alt="Sass and Less support" class="bs-docs-featurette-img img-responsive">
           <h3 class="text-center">Offering Access to Dental Care</h3>
-          <h5 class="text-center">The clinic provides a wide range of dental services for indigent and homeless persons in San Antonio and Bexar County.  SACDC is unique in the area as the only agency providing free dental care through volunteers.</h5>
+          <h5 class="text-center">The clinic provides a wide range of dental
+            services for low-income and homeless persons in San Antonio and Bexar County.  SACDC is unique in the area as the only agency providing free dental care through volunteers.</h5>
       </div>
       <div class="col-md-4">
         <img src="/static/imgs/pic-content/pic2_480.jpg" alt="Sass and Less support" class="bs-docs-featurette-img img-responsive">
@@ -25,7 +26,9 @@ tags:
       <div class="col-md-4">
         <img src="/static/imgs/pic-content/pic1_480.jpg" alt="Sass and Less support" class="bs-docs-featurette-img img-responsive">
           <h3 class="text-center">The Need is Great:</h3>
-        <h5 class="text-center">Each year the San Antonio Christian Dental Clinic performs $3.5 million dollars worth of free dental care, over 56,000 annual procedures and 7,000 patient visits. While we mainly see those in and around the Haven for Hope Area, we take anyone from Bexar County who lacks the means to afford quality dental care.</h5>
+        <h5 class="text-center">Each year the San Antonio Christian Dental
+          Clinic performs nearly $3.5 million dollars worth of free dental care,
+          over 60,000 annual procedures and 7,000 patient visits. While we mainly see those in and around the Haven for Hope area, we take anyone from Bexar County who lacks the means to afford quality dental care.</h5>
       </div>
     </div>
     <hr class="full-rule">
@@ -38,12 +41,18 @@ tags:
       <div class="col-md-4">
         <img src="/static/imgs/pic-content/pic5_480.jpg" alt="Sass and Less support" class="bs-docs-featurette-img img-responsive">
           <h3 class="text-center">Haven for Hope Partnership</h3>
-          <h5 class="text-center">In addition to caring for our community's low-income residents, SACDC provides dental care for the Haven for Hope homeless residence.  The clinic includes 12 dental treatment rooms and 4 surgery suites.</h5>
+          <h5 class="text-center">In addition to caring for our community's
+            low-income residents, SACDC provides dental care for the Haven for
+            Hope members.  The clinic includes 12 dental treatment rooms and 4 surgery suites.</h5>
       </div>
       <div class="col-md-4">
         <img src="/static/imgs/pic-content/pic6_480.jpg" alt="Sass and Less support" class="bs-docs-featurette-img img-responsive">
           <h3 class="text-center">UTHSCSA Collaboration</h3>
-          <h5 class="text-center">The University of Texas Health Science Center-SA Dental School 4th year dental students provide general dental care and Advanced Education in General Dentistry residents provide specialized treatment under the supervision of dental school faculty during a weekly rotation.</h5>
+          <h5 class="text-center">The University of Texas Health Science
+            Center-SA Dental School 4th year dental students provide general
+            dental care and Advanced Education in General Dentistry residents
+            provide specialized treatment under the supervision of dental school
+            faculty throughout the year.</h5>
       </div>
     </div>    
 </div>
