--- a/content/clinic_info/partners.html
+++ b/content/clinic_info/partners.html
@@ -24,7 +24,9 @@ tags:
           <a href="http://www.wellmedmedicalgroup.com/" target="_blank"><img class="partner img-responsive" src="/static/imgs/logos/WellMed.jpg"></a>
         </p>
         <h3>WellMed</h3>
-        <h5>WellMed's mission is to change the face of healthcare delivery for seniors. We have been recognized as a leader in preventive care and internal medicine by the healthcare industry, especially in Weslaco and McAllen, TX. Our Coordinated Care delivery system is designed to meet the individual healthcare needs of seniors.</h5>
+        <h5>WellMed's mission is to change the face of healthcare delivery for
+          seniors. They have been recognized as a leader in preventive care and
+        internal medicine by the healthcare industry. Well Med's coordinated care delivery system is designed to meet the individual healthcare needs of seniors.</h5>
       </div>
 
       <div class="col-md-4">
@@ -32,7 +34,13 @@ tags:
         <a href="http://www.mhm.org/" target="_blank"><img class="partner img-responsive" src="/static/imgs/logos/MHM.png"></a>
         </p>
         <h3>Methodist Healthcare Ministries</h3>
-        <h5>Methodist Healthcare Ministries (MHM) is a private, faith-based, not-for-profit organization dedicated to providing medical, dental and health-related human services to low-income families and the uninsured in South Texas. The mission of the organization is "Serving Humanity to Honor God" by improving the physical, mental and spiritual health of those least served in the Southwest Texas Conference area of The United Methodist Church. MHM is one-half owner of the Methodist Healthcare System - the largest healthcare system in South Texas.</h5>
+        <h5>Methodist Healthcare Ministries is a private, faith-based,
+          not-for-profit organization dedicated to providing medical, dental and
+          health-related human services to low-income families and the uninsured
+          in South Texas. The mission of the organization is "Serving Humanity to
+          Honor God" by improving the physical, mental and spiritual health of those
+          least served in the Southwest Texas Conference area of The United Methodist
+          Church. Methodist Healthcare Ministries is one-half owner of the Methodist Healthcare System - the largest healthcare system in South Texas.</h5>
       </div>
     </div>
     <hr class="full-rule">
