--- a/content/get_involved/donations.html
+++ b/content/get_involved/donations.html
@@ -6,8 +6,7 @@ tags:
   - service 
 ---
 <div class="bs-docs-featurette">
-  <h2 class="bs-docs-featurette-title">Help our Mission by Making a
-    Monetary Donation</h2>
+  <h2 class="bs-docs-featurette-title">Help our Mission by Making a Donation</h2>
   <p class="lead">As a nonprofit dental health provider, we rely
   heavily on individual monetary donations to provide services to those in
   need.</p>
