--- a/content/index.html
+++ b/content/index.html
@@ -88,7 +88,7 @@ tags:
           </div>
       </a>
     </div>
-    <h4 class="text-center">We provide free dental care to San Antonio's homeless and low-income adults.</h4>
+    <h4 class="text-center">We provide free dental care to Bexar County's homeless and low-income adults.</h4>
   </div>
   <div class="col-md-4">
     <div class="tinted">
@@ -114,12 +114,14 @@ tags:
   <div class="col-md-4 text-center">
     <img class="frontpage img-responsive" src="/static/imgs/logos/Compassion.png">
     <h2 class="text-center">Dedicated to Transparency</h2>
-    <h4 class="text-center">As one of less than 5% of all nonprofit agencies to recieve a gold rating on Guide Star, SACDC is dedicated to being as transparent as possible.</h4>
+    <h4 class="text-center">As one of less than 5% of all nonprofit agencies to receive a gold rating on GuideStar, SACDC is dedicated to being as transparent as possible.</h4>
   </div>
   <div class="col-md-4 text-center">
     <img class="frontpage img-responsive" src="/static/imgs/logos/Privately_Funded.png">
     <h2 class="text-center">Private Funding</h2>
-    <h4 class="text-center">As an agency that receives no money from public sources, SACDC relies on the generosity of people just like you.</h4>
+    <h4 class="text-center">
+      As an agency that receives no money from public sources, SACDC relies uniquely on the generosity of people just like you.
+    </h4>
   </div>
 </div>
 </div>
