--- a/content/seek_care/sched_vst.html
+++ b/content/seek_care/sched_vst.html
@@ -10,9 +10,11 @@ tags:
     <div class="row page">
 	    <div class="col-md-4">
         <img src="/static/imgs/pic-content/pic10_480.jpg" alt="Patient" class="bs-docs-featurette-img img-responsive">
-        <h4><b>Schedule Your Visit Today</b></h4>
+        <h4><b>Schedule Your Application Appointment Today</b></h4>
         <p class="">
-          SACDC welcomes all visitors. After determining your <a href="/seek_care/index.html">eligibility</a> please call or email us to schedule your visit today.
+          SACDC welcomes all visitors. After determining your <a
+            href="/seek_care/index.html">eligibility</a> please call or email us
+          to schedule your application appointment today.
           You can come by our office at the address above.</br>
         </p>
         <a href="tel://12102202300" class="btn btn-primary active" role="button">(210) 220-2300</a>
@@ -22,11 +24,13 @@ tags:
         <img src="/static/imgs/pic-content/pic16_480.jpg" alt="San Antonio Christian Dental Clinic" class="bs-docs-featurette-img img-responsive">
         <h4><b>Before You Visit</b></h4>
 	      <p>
-          After scheduling your visit, please download our patient application and clinic rules. Make sure to bring these documents and a photo ID with you to your visit.
+          After scheduling your application appointment, please download our
+          patient application and clinic guidelines. Make sure to bring these documents and a photo ID with you to your visit.
         </p>
           <a href="/clinic_info/downloads/Applicant_Handout.pdf" target="_blank" class="btn btn-primary active" role="button">Applicant Handout</a>
           <a href="/clinic_info/downloads/Applicant_Handout_Spanish.pdf" target="_blank" class="btn btn-primary active" role="button">Folleto Solicitante</a>
-          <a href="/clinic_info/downloads/Clinic_Rules_2014.pdf" target="_blank" class="btn btn-primary active" role="button">Clinic Rules</a>
+          <a href="/clinic_info/downloads/Clinic_Rules_2014.pdf" target="_blank"
+            class="btn btn-primary active" role="button">Clinic Guidelines</a>
 	    </div>
 	    <div class="col-md-4">
         <div class="text-center map-container bs-docs-featurette-img">
