--- a/content/why_oral.html
+++ b/content/why_oral.html
@@ -29,14 +29,17 @@ tags:
     <!--<br>-->
     <div class="col-md-6">
       <h3 class="story"><b>Coverage:</b></h3></br>
-      <h4>Across the country, an estimated 130 million Americans lack dental insurance.  Challenges, including the high cost of dental insurance and a lack of low-cost dental services, affect low-income families and Hispanics disproportionately.</h4>
+      <h4>Across the country, an estimated 130 million Americans lack dental insurance.  Challenges, including the high cost of insurance and a lack of low-cost services, affect low-income families and Hispanics disproportionately.</h4>
     </div>
   </div>
   <hr class="full-rule">
   <div class="row ltrtpadding">
     <div class="col-md-6">
       <h3 class="story"><b>Access:</b></h3></br>
-      <h4>Locally, only 41% of Bexar county residents have reported seeing a dentist in the past year. This need is exacerbated by the fact that the poorest counties in San Antonio fall in dental deserts where the dentist to patient ratio is 0-25% of the natonal average.</h4>
+      <h4>Locally, only 41% of Bexar county residents reported seeing a dentist
+        in the past year. The need is exacerbated because Bexar County and other
+        neighboring counties are found in dental deserts where the dentist to
+        patient ratio is 0-25% of the national average.</h4>
     </div>
     <br>
     <div class="col-md-6">
@@ -63,7 +66,7 @@ tags:
     <div class="col-md-3">
       <img class="bs-docs-featurette-img img-responsive" src="/static/imgs/pic-content/states.png" alt="A" width="172px">
       <h3 class="text-center"><b>Chronic Costs</b></h3>
-      <h5 class="text-center">For every $1 spent on preventive dental measures, taxpayers are saved as much as $50 for emergency care for the uninsured and under insured.</br></br></h5>
+      <h5 class="text-center">For every $1 spent on preventive dental measures, taxpayers are saved as much as $50 for emergency care for the uninsured and underinsured.</br></br></h5>
     </div>
   </div>
 </div>
