Finished text-only corrections from Gloria

--- a/content/seek_care/index.html
+++ b/content/seek_care/index.html
@@ -5,11 +5,20 @@ precedence: 2
 tags:
   - sa-cdc
 ---
+<script src="/static/scripts/bootbox.min.js"></script>
 <div class="bs-docs-featurette">
     <h2 class="bs-docs-featurette-title">Seeking Dental Care</h2>
     <p class="lead">
-      SACDC was established in 1986 to provide free dental care for low income and homeless Bexar County adults. Before you schedule a visit, please fill out the form on this page to determine eligibility.
+      SACDC provides free dental care for low income and homeless Bexar County
+      adults. Before you schedule a visit, please fill out the form on this
+      page.**
     </p>
+    <p>
+      **Please note this form is a guide designed to estimate eligibility.  Application appointments must be scheduled by phone.
+    </p>
+    <script>
+      bootbox.alert("Please note this form is a guide designed to estimate eligibility.  Application appointments must be scheduled by phone.");
+    </script>
     <div class="row">
       <div class="col-md-8 col-md-offset-2 blackground">
 
