--- a/content/seek_care/sched_vst.html
+++ b/content/seek_care/sched_vst.html
@@ -12,7 +12,7 @@ tags:
         <img src="/static/imgs/pic-content/pic10_480.jpg" alt="Patient" class="bs-docs-featurette-img img-responsive">
         <h4><b>Schedule Your Application Appointment Today</b></h4>
         <p class="">
-          SACDC welcomes all visitors. After determining your <a
+          SACDC welcomes all visitors. After estimating your <a
             href="/seek_care/index.html">eligibility</a> please call or email us
           to schedule your application appointment today.
           You can come by our office at the address above.</br>
