Final corrections with Johns input

--- a/content/clinic_info/index.html
+++ b/content/clinic_info/index.html
@@ -13,18 +13,18 @@ tags:
 
     <div class="row">
       <div class="col-md-4">
-        <img src="/static/imgs/pic-content/pic9_480.jpg" alt="Sass and Less support" class="bs-docs-featurette-img img-responsive">
+        <img src="/static/imgs/pic-content/pic9_480.jpg" alt="Access care" class="bs-docs-featurette-img img-responsive">
           <h3 class="text-center">Offering Access to Dental Care</h3>
           <h5 class="text-center">The clinic provides a wide range of dental
             services for low-income and homeless persons in San Antonio and Bexar County.  SACDC is unique in the area as the only agency providing free dental care through volunteers.</h5>
       </div>
       <div class="col-md-4">
-        <img src="/static/imgs/pic-content/pic2_480.jpg" alt="Sass and Less support" class="bs-docs-featurette-img img-responsive">
+        <img src="/static/imgs/pic-content/pic2_480.jpg" alt="Poverty care" class="bs-docs-featurette-img img-responsive">
           <h3 class="text-center">Why Don't They Receive Care</h3>
           <h5 class="text-center">Some are homeless, some are single mothers, others  are unemployed, some work yet remain in poverty, others may be recovering from substance abuse, many are elderly or disabled.</h5>
       </div>
       <div class="col-md-4">
-        <img src="/static/imgs/pic-content/pic1_480.jpg" alt="Sass and Less support" class="bs-docs-featurette-img img-responsive">
+        <img src="/static/imgs/pic-content/pic1_480.jpg" alt="Serving" class="bs-docs-featurette-img img-responsive">
           <h3 class="text-center">The Need is Great:</h3>
         <h5 class="text-center">Each year the San Antonio Christian Dental
           Clinic performs nearly $3.5 million dollars worth of free dental care,
@@ -34,19 +34,20 @@ tags:
     <hr class="full-rule">
     <div class="row">
       <div class="col-md-4">
-        <img src="/static/imgs/pic-content/pic4_480.jpg" alt="Sass and Less support" class="bs-docs-featurette-img img-responsive">
+        <img src="/static/imgs/pic-content/pic4_480.jpg" alt="Elderly Care" class="bs-docs-featurette-img img-responsive">
           <h3 class="text-center">Acute Need for the Elderly</h3>
           <h5 class="text-center">Hundreds of low-income elderly and disabled persons live below the poverty level in San Antonio and Bexar County, and most have no dental insurance.  Dental benefits are usually not available for seniors in Medicaid programs.</h5>
       </div>
       <div class="col-md-4">
-        <img src="/static/imgs/pic-content/pic5_480.jpg" alt="Sass and Less support" class="bs-docs-featurette-img img-responsive">
+        <img src="/static/imgs/pic-content/pic5_480.jpg" alt="Haven for Hope" class="bs-docs-featurette-img img-responsive">
           <h3 class="text-center">Haven for Hope Partnership</h3>
           <h5 class="text-center">In addition to caring for our community's
             low-income residents, SACDC provides dental care for the Haven for
             Hope members.  The clinic includes 12 dental treatment rooms and 4 surgery suites.</h5>
       </div>
       <div class="col-md-4">
-        <img src="/static/imgs/pic-content/pic6_480.jpg" alt="Sass and Less support" class="bs-docs-featurette-img img-responsive">
+        <img src="/static/imgs/pic-content/pic6_480.jpg" alt="University of
+        Texas Health Sciences" class="bs-docs-featurette-img img-responsive">
           <h3 class="text-center">UTHSCSA Collaboration</h3>
           <h5 class="text-center">The University of Texas Health Science
             Center-SA Dental School 4th year dental students provide general
