--- a/content/index.html
+++ b/content/index.html
@@ -63,7 +63,7 @@ tags:
 
 <div class="row">
   <div class="col-md-10 col-md-offset-1">
-    <h3 class="frontpage">The San Antonio Christian Dental Clinic is on a mission to extend Christ's healing by providing charitable dental care to underserved Bexar County adults</h3>
+    <h3 class="frontpage">The San Antonio Christian Dental Clinic is on a mission to extend Christ's healing by providing charitable dental care to under-served Bexar County adults</h3>
   </div>
 </div>
 
