--- a/content/clinic_info/downloads.html
+++ b/content/clinic_info/downloads.html
@@ -9,8 +9,19 @@ tags:
   <h2 class="bs-docs-featurette-title">SACDC Annual Reports</h2>
     <p class="lead">Starting in 2013, SACDC has put out annual reports in a digital format so that you can learn more about our passion and work! Please feel free to read through the past reports to learn more about who we are and what we do.</p></br>
 <div class="row">
-  <div class="col-md-6 col-md-offset-3">
-      <a href="http://online.fliphtml5.com/egva/dsrs/#p=1" target="_blank"><img src="/static/imgs/Annual_Report.jpg" alt="Sass and Less support" class="bs-docs-featurette-img img-responsive"></a>
+  <div class="col-md-10 col-md-offset-1 current-report">
+    <h3>2014 Annual Report</h3>
+    <div class="embed-responsive embed-responsive-16by9">
+      <iframe src="https://s3.amazonaws.com/online.fliphtml5.com/ttwv/qxbk/index.html#p=1" allowfullscreen allowtransparency></iframe>
+    </div>
+  </div>
+  <div class="col-md-8 col-md-offset-2">
+    <h3>2013 Annual Report</h3>
+    <div class="embed-responsive embed-responsive-16by9">
+      <iframe title='SACDC 2013 Annual Report'
+      src='https://s3.amazonaws.com/online.fliphtml5.com/egva/dsrs/index.html#p=1' type='text/html' scrolling='no'></iframe>
+      <iframe src="https://s3.amazonaws.com/online.fliphtml5.com/egva/dsrs/index.html#p=1" allowfullscreen allowtransparency></iframe>
+    </div>
   </div>
 </div>
 </div>
