--- a/content/why_oral.html
+++ b/content/why_oral.html
@@ -26,7 +26,6 @@ tags:
     <div class="col-md-6">
       <img class="bs-docs-featurette-img img-responsive" src="/static/imgs/pic-content/why_oral2_480.png" alt="A" width="480px">
     </div>
-    <!--<br>-->
     <div class="col-md-6">
       <h3 class="story"><b>Coverage:</b></h3></br>
       <h4>Across the country, an estimated 130 million Americans lack dental insurance.  Challenges, including the high cost of insurance and a lack of low-cost services, affect low-income families and Hispanics disproportionately.</h4>
@@ -51,22 +50,24 @@ tags:
     <div class="col-md-3">
       <img class="bs-docs-featurette-img img-responsive" src="/static/imgs/pic-content/tooth.png" alt="A" width="172px">
       <h3 class="text-center"><b>Point in Time</b></h3>
-      <h5 class="text-center">According to the 2014 Point In Time survey, San Antonio's homeless population cited dental care as their <b>highest need</b> and statewide, only about 14% reported receiving the dental care they needed.</br></br></h5>
+      <h5 class="text-center">According to the 2014 Point In Time survey, San Antonio's homeless population cited dental care as their <b>highest need</b> and statewide, only about 14% reported receiving the dental care they needed.</h5>
     </div>
     <div class="col-md-3">
       <img class="bs-docs-featurette-img img-responsive" src="/static/imgs/pic-content/471.png" alt="A" width="172px">
       <h3 class="text-center"><b>Lost Work</b></h3>
-      <h5 class="text-center">Each year, roughly 471 years of collective work are lost in San Antonio alone due to untreated dental disease. Nationally, that number rises to 82,000.</br></br></h5>
+      <h5 class="text-center">Each year a collective 471 years of work are lost
+      in San Antonio due to untreated dental disease-the equivalent of pulling a
+    company the size of NuStar energy out of the local economy.</h5>
     </div>
     <div class="col-md-3">
       <img class="bs-docs-featurette-img img-responsive" src="/static/imgs/pic-content/peeps.png" alt="A" width="172px">
       <h3 class="text-center"><b>Untreated Needs</b></h3>
-      <h5 class="text-center">Untreated dental decay negatively impacts employment, making it tougher for people to find and hold steady jobs.</br></br></h5>
+      <h5 class="text-center">Untreated dental decay negatively impacts employment, making it tougher for people to find and hold steady jobs.</h5>
     </div>
     <div class="col-md-3">
       <img class="bs-docs-featurette-img img-responsive" src="/static/imgs/pic-content/states.png" alt="A" width="172px">
       <h3 class="text-center"><b>Chronic Costs</b></h3>
-      <h5 class="text-center">For every $1 spent on preventive dental measures, taxpayers are saved as much as $50 for emergency care for the uninsured and underinsured.</br></br></h5>
+      <h5 class="text-center">For every $1 spent on preventive dental measures, taxpayers are saved as much as $50 for emergency care for the uninsured and underinsured.</h5>
     </div>
   </div>
 </div>
