Fixed debit card selection bug

--- a/content/get_involved/donations.html
+++ b/content/get_involved/donations.html
@@ -265,7 +265,7 @@ tags:
                 <div class="pull-right">
                   <label>
                     Debit card:
-                    <input type="checkbox" name="isdebitcardonly">
+                    <input type="checkbox" name="isdebitcardonly" value="debit">
                   </label>
                 </div>
               </div>
