--- a/content/get_involved/donations.html
+++ b/content/get_involved/donations.html
@@ -226,7 +226,7 @@ tags:
             <div class="col-sm-4">
               <div class="form-group">
                 <label class="control-label">
-                  Credit/Debit Card
+                  Credit Card
                   <input type="radio" value="CC" name="accounttype" id="paymentCC">
                 </label>
               </div>
@@ -262,12 +262,6 @@ tags:
                 <label class="control-label" for="acctnumber">Credit Card Number</label>
                 <input class="form-control" id="acctnumber" name="accountnumber" type="text" size="16" x-autocompletetype="cc-number" pattern="^[0-9]{15,16}$" required>
                 <span id="acctnumber_glyph" class="glyphicon form-control-feedback"></span>
-                <div class="pull-right">
-                  <label>
-                    Debit card:
-                    <input type="checkbox" name="isdebitcardonly" value="debit">
-                  </label>
-                </div>
               </div>
             </div>
             <div class="col-xs-offset-4 col-xs-8">
