Compiled team inputs from 24 March

--- a/content/get_involved/donations.html
+++ b/content/get_involved/donations.html
@@ -379,12 +379,14 @@ tags:
       </div>
       <p> Keep this smile for your records.</p>
       <span id="confirm"></span>
-      <p class="text-center"> Thank you for your donation!</p>
-      <p id="purchased" class="text-center"></p>
+      <p id="purchased" class="text-center">The following exemplifies the
+      services your donation supports:</p>
       <div class="text-center">San Antonio Christian Dental Clinic</div>
-      <div class="text-center">1 Haven for Hope Way</div>
-      <div class="text-center">San Antonio, Texas 78xxx</div>
-      <div class="text-center">210.555.5555</div>
+      <div class="text-center">
+        For questions or concerns regarding your donation
+        please contact Susan Quick at 210.220.2304 or
+        <a href="mailto:Susan@sachristiandental.org">Susan@sachristiandental.org</a>
+      </div>
     </div>
 
     <div id="transaction-error-block" class="center-block" style="display: none;">
@@ -407,8 +409,9 @@ tags:
 
 
 <p class="donate text-center">
-  For donation information, please contact us via telephone at (210) 220-2300 or email at
-  <a href="mailto:info@sachristiandental.org?Subject=Would%20Like%20to%20Make%20a%20Donation" target="_top">info@sachristiandental.org</a>.
+  For donation information, please contact us at
+  <a href="tel:2102202304">(210) 220-2304</a> or
+  <a href="mailto:susan@sachristiandental.org?Subject=Would%20Like%20to%20Make%20a%20Donation" target="_top">susan@sachristiandental.org</a>.
 </p>
 
 
