Final push on donation page updates

--- a/content/get_involved/donations.html
+++ b/content/get_involved/donations.html
@@ -379,8 +379,9 @@ tags:
       </div>
       <p> Keep this smile for your records.</p>
       <span id="confirm"></span>
-      <p id="purchased" class="text-center">The following exemplifies the
+      <p class="text-center">The following exemplifies the
       services your donation supports:</p>
+      <span id="purchased"></span>
       <div class="text-center">San Antonio Christian Dental Clinic</div>
       <div class="text-center">
         For questions or concerns regarding your donation
