Hide progress and top dollar amount on complete transaction

--- a/content/get_involved/donations.html
+++ b/content/get_involved/donations.html
@@ -45,7 +45,7 @@ tags:
 
 <div class="hidden donate row text-center" id="donationApp">
   <div class="col-md-8 col-md-offset-2 well" id="donation-central" style="padding: 19px 0px;">
-    <div class="row">
+    <div class="row" id="status-bar">
       <div class="col-xs-1 col-xs-offset-1 click">
         <div id="tx-one" class="active stage">
           1
