Removed Alphahome from 'Partners'

--- a/content/clinic_info/partners.html
+++ b/content/clinic_info/partners.html
@@ -64,22 +64,11 @@ tags:
     <div class="col-md-4">
       <hr class="full-rule">
       <p class="text-center partner">
-      <a href="http://www.alphahome.org/" target="_blank"><img class="partner img-responsive" src="/static/imgs/logos/Alpha_Home.jpg"></a>
-      </p>
-      <h3>Alpha Home</h3>
-      <h5>The mission of Alpha Home is to provide spiritually based substance abuse treatment and support to women and their families to prepare them to become more productive members of society.</h5>
-    </div>
-    <div class="col-md-offset-4 col-md-4">
-      <hr class="full-rule">
-      <p class="text-center partner">
       <a href="http://bhfsa.org/" target="_blank"><img class="partner
         img-responsive" src="/static/imgs/logos/Baptist.png"></a>
       </p>
       <h3>Baptist Health Foundation</h3>
-      <h5>The  Baptist Health Foundation strives to become a philanthropic
-        change-agent leader whose grants will make a difference in meeting the
-        vast unmet healthcare needs in our region. We join with our distinguished
-        funding partners in “Improving the Health of Our Community.”</h5>
+      <h5>The  Baptist Health Foundation strives to become a philanthropic change-agent leader whose grants will make a difference in meeting the vast unmet healthcare needs in our region. We join with our distinguished funding partners in “Improving the Health of Our Community.”</h5>
     </div>
   </div>
 </div>
