--- a/content/es/index.html
+++ b/content/es/index.html
@@ -1,1 +1,129 @@
-Placeholder until I copy all...
+---
+title: Home
+precedence: 100
+tags:
+  - sa-cdc
+---
+
+<div class="bs-docs-featurette">
+  <div id="show" class="row carousel slide" data-ride="carousel">
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner">
+      <div class="item active">
+        <img src="static/imgs/pic-content/frontpage1.jpg" alt="A">
+          <div class="carousel-caption captionleft">
+            <h3 class="carousel frontpage">Help us Bring Back A Smile</h3>
+            <h4 class="carousel">Jason was in so much pain he was unable to work</h4>
+                <a href="/get_involved/donations/" class="btn btn-primary active" role="button">Donate Now</a>
+                <a href="/stories/story1/" class="btn btn-primary active" role="button">Learn More</a>
+          </div>
+          <div class="carousel-caption captionsmallleft">
+            <h4 class="captionsmall">Help us Bring Back a Smile</h4>
+          </div>
+          <div class="carousel-caption captionattributionright">
+                <a href="https://creativecommons.org/licenses/by-nc/2.0/legalcode" target="_blank">Photo by Michael Dreves Beier</a>
+          </div>
+      </div>
+      <div class="item">
+        <img src="static/imgs/pic-content/frontpage2.jpg" alt="B">
+          <div class="carousel-caption captionright">
+            <h3 class="carousel frontpage">Dental Care for Those in Need</h3>
+            <h4 class="carousel">A new smile helped Ricardo continue on his path to recovery</h4>
+                <a href="/get_involved/donations/" class="btn btn-primary active" role="button">Donate Now</a>
+                <a href="/stories/story2/" class="btn btn-primary active" role="button">Learn More</a>
+          </div>
+          <div class="carousel-caption captionsmallright">
+              <h4 class="captionsmall">Dental Care for Those in Need</h4>
+          </div>
+          <div class="carousel-caption captionattributionleft">
+              <a
+                href="https://creativecommons.org/licenses/by-nc-nd/2.0/legalcode"
+              target="_blank">Photo by Laurent Lavi Lazzeresky</a>
+          </div>
+      </div>
+      <div class="item">
+        <img src="static/imgs/pic-content/frontpage3.jpg" alt="C">
+          <div class="carousel-caption captionleft">
+            <h3 class="carousel frontpage">The Need is Great</h3>
+            <h4 class="carousel">When Monica needed emergency extractions, SACDC jumped in to help</h4>
+                <a href="/get_involved/donations/" class="btn btn-primary active" role="button">Donate Now</a>
+                <a href="/stories/story3/" class="btn btn-primary active" role="button">Learn More</a>
+          </div>
+          <div class="carousel-caption captionsmallleft">
+              <h4 class="captionsmall">The Need is Great</h4>
+          </div>
+          <div class="carousel-caption captionattributionright">
+              <a
+                href="https://creativecommons.org/licenses/by-nc-nd/2.0/legalcode"
+              target="_blank">Photo by Laurent Lavi Lazzeresky</a>
+          </div>
+        </div>
+    </div>
+  </div>
+
+<div class="row">
+  <div class="col-md-10 col-md-offset-1">
+    <h3 class="frontpage">La Clínica Dental Cristiana de San Antonio tiene como misión extender la curación de Cristo mediante la atención dental de caridad para adultos con escasos recursos en el Condado de Bexar</h3>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-md-4">
+    <div class="tinted">
+      <a href="/why_oral/">
+        <img class="bs-docs-featurette-img img-responsive" src="/static/imgs/pic-content/pic17_480_dark.jpg">
+        <div class="carousel-caption carousel-caption-ctr">
+          <h3>The Problem: Lack of Access</h3>
+        </div>
+      </a>
+    </div>
+    <h4 class="text-center">41% de los adultos en San Antonio carecen de acceso a la atención dental básica.</h4>
+  </div>
+  <div class="col-md-4">
+    <div class="tinted">
+      <a href="/clinic_info/">
+        <img class="bs-docs-featurette-img img-responsive" src="/static/imgs/pic-content/pic18_480_dark.jpg">
+          <div class="carousel-caption carousel-caption-ctr">
+            <h3>Breaking Down Barriers</h3>
+          </div>
+      </a>
+    </div>
+    <h4 class="text-center">Ofrecemos atención dental gratuita a adultos sin hogar y de bajos ingresos que viven en el Condado de Bexar.</h4>
+  </div>
+  <div class="col-md-4">
+    <div class="tinted">
+      <a href="/get_involved/">
+        <img class="bs-docs-featurette-img img-responsive" src="/static/imgs/pic-content/pic19_480_dark.jpg">
+        <div class="carousel-caption carousel-caption-ctr">
+          <h3>How You Can Help</h3>
+        </div>
+      </a>
+    </div>
+    <h4 class="text-center">Ayúdanos a formar el futuro de San Antonio.</h4>
+  </div>
+</div>
+
+<hr class="half-rule">
+
+<div class="row">
+  <div class="col-md-4 text-center">
+    <img class="frontpage img-responsive" src="/static/imgs/logos/teaming_up.png">
+    <h2 class="text-center">Unámonos</h2>
+    <h4 class="text-center">Ayudar a aquellos que tienen necesidad de reemplazar la pobreza por un estado de  independencia requiere alianzas fuertes. Conoce a algunos de los grupos de apoyo.</h4>
+  </div>
+  <div class="col-md-4 text-center">
+    <img class="frontpage img-responsive" src="/static/imgs/logos/Compassion.png">
+    <h2 class="text-center">Dedicados a la Transparencia</h2>
+    <h4 class="text-center">SACDC es una las pocas agencias (5%) sin fines de lucro que recibe una calificación de oro en GuideStar. SACDC se dedica a ser lo más transparente posible.</h4>
+  </div>
+  <div class="col-md-4 text-center">
+    <img class="frontpage img-responsive" src="/static/imgs/logos/Privately_Funded.png">
+    <h2 class="text-center">Financiamiento Privado</h2>
+    <h4 class="text-center">
+      SACDC es una agencia que no recibe dinero de fuentes públicas, y depende únicamente de la generosidad de personas como usted.
+    </h4>
+  </div>
+</div>
+</div>
+
+
