Removed examples of what a donation pays for

--- a/content/get_involved/donations.html
+++ b/content/get_involved/donations.html
@@ -379,9 +379,10 @@ tags:
       </div>
       <p> Keep this smile for your records.</p>
       <span id="confirm"></span>
-      <p class="text-center">The following exemplifies the
+      <!--<p class="text-center">The following exemplifies the
       services your donation supports:</p>
-      <span id="purchased"></span>
+      <span id="purchased"></span>-->
+      <p class="text-center">Thank you for your donation!</p>
       <div class="text-center">San Antonio Christian Dental Clinic</div>
       <div class="text-center">
         For questions or concerns regarding your donation
