--- a/content/get_involved/events.html
+++ b/content/get_involved/events.html
@@ -1,2 +1,23 @@
-<html>
-</html>
+---
+title: Special Events 
+group: Get Involved
+precedence: 3
+tags:
+  - sa-cdc
+---
+<div class="bs-docs-featurette">
+    <h2 class="bs-docs-featurette-title">Special Events.</h2>
+    <div class="row page">
+      <div class="col-md-4">
+        <ul>
+          <li>30th Anniversary Gala</li>
+          <li>RSVP: 30thanniversary@sachristiandental.org</li>
+          <li><a href=''>Event Sponsors</a></li>
+        </ul>
+        
+      </div>
+      <div class="col-md-2">
+        <img src="/static/imgs/pic-content/pic13_480.jpg" alt="Responsive across devices" class="bs-docs-featurette-img img-responsive">
+      </div>
+    </div>
+</div>
