--- a/content/get_involved/index.html
+++ b/content/get_involved/index.html
@@ -18,7 +18,7 @@ tags:
         <img src="/static/imgs/pic-content/pic13_480.jpg" alt="Responsive across devices" class="bs-docs-featurette-img img-responsive">
         <h3>Ways To Get Involved</h3>
         <p>Some examples of the kind of support we need</p>
-        <p>&gt; <em>Dental Staff</em>: Dentists, Hygienists, RDAs, sterilization, and laboratory technicians</p>
+        <p>&gt; <em>Dental Staff</em>: Dentists, Hygienists, RDAs, sterilization and laboratory technicians</p>
         <p>&gt; <em>Administrative Volunteers</em>: Office receptionists, record maintenance, database entry</p>
         <p>&gt; <em>Development and Marketing</em>: Graphic designers, special
         events coordinators, fund-raising, social media champions, and business administration </p>
