--- a/content/events/gala2016.html
+++ b/content/events/gala2016.html
@@ -1,4 +1,36 @@
 ---
-
+title: 30th Anniversary Gala
+group: none
+precedence: 1
+tags:
 ---
-<b>stuff</b>
+<div class="bs-docs-featurette">
+    <h2 class="bs-docs-featurette-title">30th Anniversary Gala</h2>
+    <h3>Please reserve your seat tody for our 30th Anniversary Gala to honor those who are the lights for the San Antonio Christian Dental Clinic.</h3>
+    <div class="row page">
+      <div class="col-md-4">
+        <h2>Details</h2>
+        <ul>
+          <li>Thursday, March 3rd 2016 6 O'Clock</li>
+          <li>4100 N New Braunfels Ave</li>
+          <li>San Antonio, TX 78209</li>
+          <li><a href="https://www.google.com/maps/place/San+Antonio+Country+Club/@29.4667884,-98.4601072,15z/data=!4m2!3m1!1s0x0:0x293ad8d6ae93106f">Google Map Link</a></li>
+        </ul>
+      </div>
+      <div class="col-md-4">
+        <h2>Why</h2>
+        <ul>
+          <li>30th Anniversary Gala</li>
+          <li>Honoring those who light our clinic</li>
+          <li>...a lamp to my feet and a light to my path. Psalm 119:105</li>
+        </ul>
+      </div>
+      <div class="col-md-4">
+        <h2>Support</h2>
+        <ul>
+          <li><a href="">Become a sponsor today</a></li>
+          <li><a href="">View Sponsors</a></li>
+        </ul>
+      </div>
+    </div>
+</div>
