--- a/content/get_involved/events.html
+++ b/content/get_involved/events.html
@@ -3,7 +3,7 @@ title: Special Events
 group: Get Involved
 precedence: 3
 tags:
-  - sa-cdc
+  - service
 ---
 <div class="bs-docs-featurette">
     <h2 class="bs-docs-featurette-title">Special Events.</h2>
