--- a/content/get_involved/gala2016sponsors.html
+++ b/content/get_involved/gala2016sponsors.html
@@ -1,12 +1,12 @@
 ---
-title: Partnering Organizations
+title: 30th Anniversary Sponsors
 group: Special Events
 tags:
   - event
 ---
 
 <div class="bs-docs-featurette">
-  <h3 class="bs-docs-featurette-title">Partnering Organizations</h3>
+  <h3 class="bs-docs-featurette-title">30th Anniversary Gala Sponsors</h3>
   <div class="row">
     <div class="col-md-4">
       <hr class="full-rule">
