Update and rename gala2016sponsors.html to gala2016support.html

--- a/content/get_involved/gala2016support.html
+++ b/content/get_involved/gala2016support.html
@@ -6,7 +6,8 @@ tags:
 ---
 
 <div class="bs-docs-featurette">
-  <h3 class="bs-docs-featurette-title">30th Anniversary Gala Sponsors</h3>
+  <h3 class="bs-docs-featurette-title">Sponsor the San Antonio Christian Dental Clinic's 30th Anniversary Gala</h3>
+  <p><a href="/get_involved/gala2016sponsors/">Current Sponsors</a></p>
   <div class="row">
     <div class="col-md-4">
       <hr class="full-rule">
