--- a/content/get_involved/gala2016sponsors.html
+++ b/content/get_involved/gala2016sponsors.html
@@ -7,7 +7,6 @@ tags:
 
 <div class="bs-docs-featurette">
   <h3 class="bs-docs-featurette-title">30th Anniversary Gala Sponsors</h3>
-  <p><a href="/get_involved/gala2016sponsors/">Current Sponsors</a></p>
   <div class="row">
     <div class="col-md-4">
       <hr class="full-rule">
@@ -46,5 +45,5 @@ tags:
       </p>
     </div>
   </div>
-  <h3><a href="">Register/Sponsor now!</a></h3>
+  <h3><a href="/get_involved/gala2016register/">Register/Sponsor now!</a></h3>
 </div>
