Added no-link tag (removes menu link)

--- a/content/get_involved/gala2016.html
+++ b/content/get_involved/gala2016.html
@@ -3,6 +3,7 @@ title: 30th Anniversary Gala
 group: none
 precedence: 1
 tags:
+    - no-link
 ---
 <div class="bs-docs-featurette">
     <h2 class="bs-docs-featurette-title">30th Anniversary Gala</h2>
