--- a/content/get_involved/events.html
+++ b/content/get_involved/events.html
@@ -10,9 +10,10 @@ tags:
     <div class="row page">
       <div class="col-md-4">
         <ul>
-          <li>30th Anniversary Gala</li>
-          <li>RSVP: 30thanniversary@sachristiandental.org</li>
-          <li><a href=''>Event Sponsors</a></li>
+          <li><a href="/get_involved/2016gala/">30th Anniversary Gala</a></li>
+          <li>RSVP: <a href="mailto:30thanniversary@sachristiandental.org">30thanniversary@sachristiandental.org</a></li>
+          <li><a href="/get_involved/2016galasponsors">Event Sponsors</a></li>
+          <li><a href="/get_involved/2016galasupport">Register/Support</a></li>
         </ul>
         
       </div>
