--- a/content/get_involved/events.html
+++ b/content/get_involved/events.html
@@ -8,16 +8,16 @@ tags:
 <div class="bs-docs-featurette">
     <h2 class="bs-docs-featurette-title">Special Events.</h2>
     <div class="row page">
-      <div class="col-md-4">
+      <div class="col-md-8">
         <ul>
-          <li><a href="/get_involved/2016gala/">30th Anniversary Gala</a></li>
+          <li><a href="/get_involved/gala2016/">30th Anniversary Gala</a></li>
           <li>RSVP: <a href="mailto:30thanniversary@sachristiandental.org">30thanniversary@sachristiandental.org</a></li>
-          <li><a href="/get_involved/2016galasponsors">Event Sponsors</a></li>
-          <li><a href="/get_involved/2016galasupport">Register/Support</a></li>
+          <li><a href="/get_involved/gala2016sponsors">Event Sponsors</a></li>
+          <li><a href="/get_involved/gala2016support">Register</a></li>
         </ul>
         
       </div>
-      <div class="col-md-2">
+      <div class="col-md-4">
         <img src="/static/imgs/pic-content/pic13_480.jpg" alt="Responsive across devices" class="bs-docs-featurette-img img-responsive">
       </div>
     </div>
