--- a/content/get_involved/gala2016.html
+++ b/content/get_involved/gala2016.html
@@ -29,8 +29,8 @@ tags:
       <div class="col-md-4">
         <h2>Support</h2>
         <ul>
-          <li><a href="">Become a sponsor today</a></li>
-          <li><a href="">View Sponsors</a></li>
+          <li><a href="/get_involved/gala2016support">Become a sponsor today</a></li>
+          <li><a href="/get_involved/gala2016sponsors">View Sponsors</a></li>
         </ul>
       </div>
     </div>
