--- a/content/get_involved/gala2016register.html
+++ b/content/get_involved/gala2016register.html
@@ -8,6 +8,6 @@ tags:
 <div class="bs-docs-featurette">
     <h2 class="bs-docs-featurette-title">30th Anniversary Gala Registration</h2>
     <div class="page">
-      <b> VANCO PAGE EMBEDDED HERE, if possible. </b>
+      <iframe seamless src="https://www.eservicepayments.com/cgi-bin/Vanco_ver3.vps?appver3=SsKSQ0-nPT_k4RByT8_3XTagSqw3lI4LSgHATMFYa-fI4JFV6qDgw2gzJANeDP8sT44Qa_wo16gh5S2Ln1bTg2lQKuUdB-gjLySxoj7FITMIStZyi2v2umLwfXvjBa6dPnnm7Zs70OdTOirbHIMttd4V9hBnyZhl5tca5k2uzWp_o8AutleVKy2zKPXvEKa1nlMKkWdN-TvmN311O2DfOA==&ver=3"> VANCO PAGE EMBEDDED HERE, if possible. </iframe>
     </div>
 </div>
