Bug associated with CC value converted to Cc

--- a/content/get_involved/donations.html
+++ b/content/get_involved/donations.html
@@ -227,7 +227,7 @@ tags:
               <div class="form-group">
                 <label class="control-label">
                   Credit Card
-                  <input type="radio" value="CC" name="accounttype" id="paymentCC">
+                  <input type="radio" value="T" name="accounttype" id="paymentCC">
                 </label>
               </div>
             </div>
