Added Save the date graphic

--- a/content/get_involved/events.html
+++ b/content/get_involved/events.html
@@ -18,7 +18,8 @@ tags:
         
       </div>
       <div class="col-md-4">
-        <img src="/static/imgs/pic-content/pic13_480.jpg" alt="Responsive across devices" class="bs-docs-featurette-img img-responsive">
+        <img src="/static/imgs/events/2016galaSaveTheDateSm.png" alt="Save the
+        date for 2016 Gala, 30th anniverary" class="bs-docs-featurette-img img-responsive">
       </div>
     </div>
 </div>
