Added events for donation from carousel

--- a/content/index.html
+++ b/content/index.html
@@ -14,7 +14,12 @@ tags:
           <div class="carousel-caption captionleft">
             <h3 class="carousel frontpage">Help us Bring Back A Smile</h3>
             <h4 class="carousel">Jason was in so much pain he was unable to work</h4>
-                <a href="/get_involved/donations/" class="btn btn-primary active" role="button">Donate Now</a>
+                <a href="/get_involved/donations/" class="btn btn-primary active" role="button" onclick="ga('send', {
+		'hitType': 'event',
+		'eventCategory': 'donation',
+		'eventAction': 'VancoDonation-carousel',
+		'eventValue': 100
+	});">Donate Now</a>
                 <a href="/stories/story1/" class="btn btn-primary active" role="button">Learn More</a>
           </div>
           <div class="carousel-caption captionsmallleft">
@@ -29,7 +34,12 @@ tags:
           <div class="carousel-caption captionright">
             <h3 class="carousel frontpage">Dental Care for Those in Need</h3>
             <h4 class="carousel">A new smile helped Ricardo continue on his path to recovery</h4>
-                <a href="/get_involved/donations/" class="btn btn-primary active" role="button">Donate Now</a>
+                <a href="/get_involved/donations/" class="btn btn-primary active" role="button" onclick="ga('send', {
+		'hitType': 'event',
+		'eventCategory': 'donation',
+		'eventAction': 'VancoDonation-carousel',
+		'eventValue': 100
+	});">Donate Now</a>
                 <a href="/stories/story2/" class="btn btn-primary active" role="button">Learn More</a>
           </div>
           <div class="carousel-caption captionsmallright">
@@ -46,7 +56,12 @@ tags:
           <div class="carousel-caption captionleft">
             <h3 class="carousel frontpage">The Need is Great</h3>
             <h4 class="carousel">When Monica needed emergency extractions, SACDC jumped in to help</h4>
-                <a href="/get_involved/donations/" class="btn btn-primary active" role="button">Donate Now</a>
+                <a href="/get_involved/donations/" class="btn btn-primary active" role="button" onclick="ga('send', {
+		'hitType': 'event',
+		'eventCategory': 'donation',
+		'eventAction': 'VancoDonation-carousel',
+		'eventValue': 100
+	});">Donate Now</a>
                 <a href="/stories/story3/" class="btn btn-primary active" role="button">Learn More</a>
           </div>
           <div class="carousel-caption captionsmallleft">
